Fix Meson install

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,3 @@
 interval_map_dep = declare_dependency(include_directories: 'include')
+
+install_headers('include/interval-map/interval-map.hh', subdir: 'interval-map')
